Added idb.js library for IndexDBPromised, implemented methods to read from api and insert into indexdb, created manifest.json

--- a/restaurant.html
+++ b/restaurant.html
@@ -9,6 +9,9 @@
   <link rel="stylesheet" href="css/styles.css" type="text/css">
   <script type="application/javascript" src="js/register_service_worker.js"></script>
   <title>Restaurant Info</title>
+  <!-- manifest and meta theme color -->
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#c15641">
 </head>
 
 <body class="inside">
@@ -70,6 +73,9 @@
   <!-- End footer -->
 
   <!-- Beginning scripts -->
+  <!-- IndexDB helpers -->
+  <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/idbhelper.js"></script>  
   <!-- Database helpers -->
   <script type="text/javascript" src="js/dbhelper.js"></script>
   <!-- Main javascript file -->
