--- a/index.html
+++ b/index.html
@@ -2,15 +2,18 @@
 <html lang="en">
 
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />  
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="stylesheet" src="//normalize-css.googlecode.com/svn/trunk/normalize.css" />
   <link rel="stylesheet" href="css/styles.css">
   <script type="application/javascript" src="js/register_service_worker.js"></script>
   <title>Restaurant Reviews</title>
+  <!-- manifest and meta theme color -->
+  <link rel="manifest" href="/manifest.json">
+  <meta name="theme-color" content="#c15641">
 </head>
 
 <body>
- 
+
   <header>
     <nav>
       <h1>
@@ -28,12 +31,12 @@
       <div class="filter-options" id="restaurantFilters" tabindex="-1">
         <h2>Filter Results</h2>
         <div class="filter-options-inner">
-          <label class="filter-options-label" >All Neighborhoods</label>
-          <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()">
+          <label class="filter-options-label" for="neighborhoods-select">All Neighborhoods</label>
+          <select id="neighborhoods-select" name="neighborhoods" onchange="updateRestaurants()" aria-label="neighborhoods-select">
             <option value="all">All Neighborhoods</option>
           </select>
-          <label class="filter-options-label">All Cuisines</label>
-          <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()">
+          <label class="filter-options-label" for="cuisines-select">All Cuisines</label>
+          <select id="cuisines-select" name="cuisines" onchange="updateRestaurants()" aria-label="cuisines-select">
             <option value="all">All Cuisines</option>
           </select>
         </div>
@@ -42,10 +45,13 @@
     </section>
   </main>
 
+
+  <script type="application/javascript" charset="utf-8" src="js/idb.js"></script>
+  <script type="application/javascript" charset="utf-8" src="js/idbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/dbhelper.js"></script>
   <script type="application/javascript" charset="utf-8" src="js/main.js"></script>
   <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBQIcEDJHQfAjAU9DA7PaMHTh8T3BnETkk&libraries=places&callback=initMap"></script>
-  
+
 
 
   <footer id="footer">
